--- a/utils/styles.css
+++ b/utils/styles.css
@@ -6,12 +6,100 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
+  margin-left: 10px;
 }
 
 div.hidden {
   display: none;
 }
 
-.active{
-  color: green;
+body{
+  width: 600px;
+  height: 480px;
+  border: 1px solid red;
+  background-color: rgba(14, 14, 14);
+  color: white;
+  border-radius: 10px;
 }
+
+#new-tab-img{
+  width: 24px;
+  height: 24px;
+}
+
+.phrase-container {
+  width: 120px; 
+  height: 20px; 
+  margin: 5px; 
+  padding: 8px; 
+  font-size: 14px; 
+  box-sizing: border-box;
+  align-items: center;
+  background-color: rgb(28, 28, 28);
+  border-radius: 3px;
+  color: white;
+}
+
+.password-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+  max-width: 300px;
+}
+
+
+.password-input {
+  width: 295px;
+  height: 20px;
+  margin: 10px 0;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.password-info {
+  text-align: center;
+  margin-bottom: 5px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+button, input{
+  all: unset;
+}
+
+input {
+  background-color: rgb(28, 28, 28);
+  border: 1px solid rgb(50, 152, 253);
+}
+
+#confirm-new-password-button{
+  width: 300px;
+  height: 30px;
+  border-radius: 15px;
+  border: 1px solid white;
+  text-align: center;
+  background-color: rgb(50, 152, 253);
+  color: white;
+  margin: 5px;
+  font-size: 26px;
+}
+
+.center-logo{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.center-logo img{
+  width: 48px;
+  height: 48px;
+}
+
+#openTabButton{
+  position: fixed;
+}
+
