--- a/utils/home.css
+++ b/utils/home.css
@@ -45,14 +45,6 @@
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
-
-
-}
-
-.to-center-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .header-button-img{
@@ -116,22 +108,6 @@
     max-width:450px;
     height: 80%;
     max-height: 200px;
-}
-
-.action-button{
-    width: 250px;
-    height: 40px;
-    color: white;
-    margin-top: 30px;
-    text-align: center;
-    background-color: rgb(50, 152, 253);
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 10px;
-}
-
-.action-button:disabled{
-    background-color: rgb(25, 76, 127);
 }
 
 .token-div{
@@ -200,4 +176,52 @@
 
 .div-to-right{
     text-align: right;
+}
+
+.graph-button{
+    width: 115px;
+    height: 20px;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(50, 152, 253);
+}
+
+.active-graph-button{
+    color: rgb(50, 152, 253);
+    border: 1px solid rgb(50, 152, 253);
+    background-color: rgb(227, 227, 227);
+}
+
+#graph-buttons-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border-radius: 5px;
+    height: 25px;
+    background-color: rgb(81, 81, 81); */
+}
+
+#copy-private-key{
+    width: 400px;
+    text-align: center;
+    height: 30px;
+    color: white;
+    background-color: rgb(50, 152, 253);
+    font-style: bold;
+    border-radius: 15px;
+}
+
+#logout-button{
+    text-align: center;
+    height: 30px;
+    color: red;
+    background-color: rgb(50, 152, 253);
+    font-style: bold;
+    border-radius: 15px;
+}
+
+#settings-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
