--- a/utils/styles.css
+++ b/utils/styles.css
@@ -131,3 +131,15 @@ input {
   text-align: center;
   margin-top: 20px;
 }
+
+.error-div{
+  width: 400px;
+  height: 50px;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(56, 56, 56);
+  border: 1px solid white;
+  position: fixed;
+  top: 5px;
+  left: 100px;
+}
