--- a/utils/home.css
+++ b/utils/home.css
@@ -40,7 +40,7 @@
 #main-content{
     width: 500px;
     margin-left: 50px;
-    border: 1px solid red;
+    border: 1px solid rgb(50, 152, 253);
     height: 250px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -209,15 +209,19 @@
     background-color: rgb(50, 152, 253);
     font-style: bold;
     border-radius: 15px;
+    margin-top: 50px;
 }
 
 #logout-button{
     text-align: center;
+    width: 150px;
     height: 30px;
-    color: red;
-    background-color: rgb(50, 152, 253);
+    color: rgb(255, 148, 146);
+    border: rgb(50, 152, 253) 1px solid;
+    background-color: rgb(42,49,60);
     font-style: bold;
     border-radius: 15px;
+    margin-top: 50px;
 }
 
 #settings-container{
@@ -225,3 +229,4 @@
     flex-direction: column;
     align-items: center;
 }
+
