--- a/utils/home.css
+++ b/utils/home.css
@@ -230,3 +230,10 @@
     align-items: center;
 }
 
+#calldata-input{
+    width: 450px;
+    height: 25px;
+    font-size: 20px;
+    color: white;
+    margin-top: 30px;
+}
